

namespace Source.Scripts.Constants
{
    public static class AnimationStrings
    {
        // Animation States
        public const string OnGround = "OnGround";
        public const string IsMoving = "IsMoving";
        public const string SideTouch = "SideTouch";
        
        public const string Idle = "Idle";
        public const string IdleCombat = "IdleCombat";
        public const string Run = "Run";
        public const string Jump = "Jump";
        public const string Fall = "Fall";
        public const string AttackOverhead = "AttackOverhead";
        public const string AttackMiddle = "AttackMiddle";
        public const string AttackUppercut = "AttackUppercut";
        public const string Bow = "Bow";
        public const string BowDrawn = "BowDrawn";
        public const string BowShoots = "BowShoots";
        public const string Cast = "Cast";
        public const string CastLoop = "CastLoop";
    
    
    }
}
